@@ -3,5 +3,5 @@ CLASSPATH=../craftbukkit-1.1-R3.jar javac *.java -Xlint:unchecked -Xlint:depreca
 rm -rf me 
 mkdir -p me/exphc/SilkSpawners
 mv *.class me/exphc/SilkSpawners
-jar cf SilkSpawners.jar me/ *.yml *.java ChangeLog README.md
+jar cf SilkSpawners.jar me/ *.yml *.java ChangeLog README.md LICENSE
 cp SilkSpawners.jar ../plugins/
